# python-irodsclient

./: .gitchangelog.rc  .gitignore  AUTHORS  CHANGELOG.md  CHANGELOG.rst  CHANGES  Dockerfile.prc_test.centos  Dockerfile.prc_test.ubuntu  LICENSE.txt  MANIFEST.in  PYTHON_2_7.rst  PYTHON_install_caveats.rst  README.md  README.rst  Testing.md  auth_native.py  auth_pam_password.py  auth_thru_proj_templ_cpp.py  browse_test.py  buildclient.sh  coll_test.py  demo-thread.py  docker-compose.yml  file_test.py  irods_consortium_continuous_integration_test_module.py  message_test.py  meta.py  meta_test.py  pam_login_without_env.py  parallel_demo.py  print_resc_properties.py  pylintrc  pyproject.toml  query_test.py  run_python_tests.sh  setup.py  test.py
.github/workflows/: linter-ruff.yml  main.yml  run-bats-tests.yml  run-local-suite.yml  run-test-programs-single-node.yml  run-test-suite-multiple-node.yml  run-test-suite-single-node.yml  run-the-tests.yml
docker-testing/: README.md  apt-list-all.dockerfile  harness-docker-compose-irods-5.yml  harness-docker-compose.yml  iinit.py  print_repo_root_location  recv_oneshot  run_tests.sh  start_containers.sh  stop_containers.sh
docker-testing/irods_catalog/: Dockerfile
docker-testing/irods_catalog_4/: init-user-db.sh
docker-testing/irods_catalog_5/: Dockerfile  init-user-db.sh
docker-testing/irods_catalog_provider/: Dockerfile  entrypoint.sh
docker-testing/irods_catalog_provider_4/: Dockerfile  entrypoint.sh  send_oneshot  setup-4.3.4.input
docker-testing/irods_catalog_provider_5/: Dockerfile  entrypoint.sh  send_oneshot  setup-5.0.0.input
docker-testing/old/irods_catalog_provider/: Dockerfile
docker-testing/python_client/: Dockerfile
docker_build/: Dockerfile.provider  ICAT.sql  build_deps_list  iinit.py  install_python_rule_engine  pgpass  setup_python_rule_engine  wait_on_condition
irods/: __init__.py  access.py  account.py  api_number.py  at_client_exit.py  client_init.py  client_server_negotiation.py  collection.py  column.py  connection.py  constants.py  data_object.py  exception.py  file.py  genquery2.py  keywords.py  message.py  meta.py  miscsvrinfo.py  models.py  msi_test.py  parallel.py  password_obfuscation.py  pool.py  prc_http_client_demo.py  prc_write_irodsA.py  query.py  resource.py  resource_manager.py  results.py  rule.py  session.py  ticket.py  user.py  version.py  zone.py
irods/auth/: __init__.py  native.py  pam.py  pam_interactive.py  pam_password.py
irods/client/http/: __init__.py
irods/client_configuration/: __init__.py
irods/helpers/: __init__.py
irods/manager/: __init__.py  access_manager.py  collection_manager.py  data_object_manager.py  metadata_manager.py  resource_manager.py  user_manager.py  zone_manager.py
irods/manager/_internal/: _api_impl.py  _logical_path.py
irods/message/: __init__.py  message.py  old_message.py  ordered.py  property.py  property_types.py  quasixml.py
irods/path/: __init__.py
irods/resource_manager/: __init__.py  collection_manager.py  data_object_manager.py  metadata_manager.py  user_manager.py
irods/simple_client/: __init__.py
irods/test/: PRC_issue_362.bats  README.md  README.rst  Testing.md  access_gsi_test.py  access_test.py  admin_test.py  browse_test.py  cleanup_functions_test.py  client_configuration_test.py  client_hints_test.py  coll_test.py  collection_gsi_test.py  collection_test.py  config.py  connection_gsi_test.py  connection_test.py  data_obj_gsi_test.py  data_obj_test.py  demo.sh  demo_hook.sh  exception_test.py  extended_gsi_test.py  extended_test.py  file_gsi_test.py  file_test.py  force_create.py  genquery2_test.py  helpers.py  irods_consortium_continuous_integration_build_hook.py  json_config  library_features_test.py  login_auth_test.py  login_auth_test.sh  login_auth_test_1.py  login_auth_test_2.py  login_auth_test_must_run_manually.py  message_test.py  meta_gsi_test.py  meta_test.py  (+24 more)
irods/test/harness/: 000_install-irods.Dockerfile  001_bats-python3.Dockerfile  002_ssl-and-pam.Dockerfile  003_compile-specific-python.Dockerfile  003_prc-with-py3_12_2.Dockerfile  README.md  README.txt  build-docker.sh  create_docker_images.sh  docker_container_driver.sh  install.sh  install_python_rule_engine  irods_version_greater_or_equal_to  manage_irods5_procs  most_recent_python.sh  print_repo_root_location  setup_python_rule_engine  start_postgresql_and_irods.sh  test_script_parameters
irods/test/modules/: test_auto_close_of_data_objects__issue_456.py  test_client_exit_functions.py  test_saving_and_loading_of_settings__issue_471.py  test_signal_handling_in_multithread_get.py  test_signal_handling_in_multithread_put.py  test_xml_parser.py  tools.py
irods/test/pam.bats/: funcs  test001_pam_password_expiration.bats
irods/test/scripts/: README.md  _test001_pam_password_expiration.bats  demo_script  experiment.sh  fail.sh  funcs  iinit.py  iterate_test1thru9.sh  pam_irodsA_write_4.3auth.py  run_suite_locally.sh  test000.bats  test001_pam_password_expiration.bats  test002.bats  test002_write_native_credentials_to_secrets_file.bats  test003_write_pam_credentials_to_secrets_file.bats  test004_prc_pam_password_internal_secrets_file_generation.bats  test005_test_special_characters_in_pam_passwords.bats  test005_test_special_characters_in_passwords.bats  test005_write_pam_credentials_to_secrets_file.bats  test006_connection_timeout_on_ssl_socket.bats  test007_pam_features_in_new_auth_framework.bats  test012.bats  (+6 more)
irods/test_client/: applyticket.py
test_harness/multiple_node/: README.md  harness-docker-compose-irods-4.yml  print_repo_root_location  run_tests.sh  start_containers.sh  stop_containers.sh
test_harness/single_node/: 000_install-irods.Dockerfile  001_bats-and-system-python.Dockerfile  002_compile-specific-python.Dockerfile  README.md  build-docker.sh  create_docker_images.sh  docker_container_driver.sh  install.sh  install_python_rule_engine  irods_version_greater_or_equal_to  manage_irods5_procs  most_recent_python.sh  setup_python_rule_engine  start_postgresql_and_irods.sh  test_script_parameters
test_harness/utility/: iinit.py
(+18 files in other folders)
